[package]
name = "kvs"
version = "0.1.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.0"
rmp = "0.8"
rmp-serde = "0.13"
serde = "1.0"
tempfile = "3.0.7"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.2"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "my_benchmark"
harness = false
