[package]
name = "kvs"
version = "0.1.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.0"
rmp = "0.8"
rmp-serde = "0.13"
serde = "1.0"
sled = "0.24.1"
slog = "2.4.1"
slog-async = "2.3.0"
slog-term = "2.4.0"
tempfile = "3.0.7"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.2"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false
